--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Trevor Gau's solutions to Advent of Code",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
@@ -35,5 +35,10 @@
 		"playwright-chromium": "^1.28.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.3.2"
+	},
+	"devDependencies": {
+		"@types/jest": "^29.5.11",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.1.1"
 	}
 }
